# hydromt_sfincs

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  README.rst  environment.yml  graphing-1.parquet  index.html  make_env.py  my_data.nc  pixi.toml  pyproject.toml  string_out.nc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  documentation_improvement.yaml  feature_request.yaml
.github/workflows/: docs.yml  linting.yml  publish.yml  test_numba.yml  tests.yml  tests_dev.yml
binder/: environment.yml  hydromt_sfincs.yml  postBuild
dev/: api.html  changelog.html  contributing.html  genindex.html  index.html  installation.html  intro.html  objects.inv  py-modindex.html  search.html  searchindex.js
dev/_examples/: README.html  analyse_sfincs_input.html  analyse_sfincs_model.html  build_coastal_model.html  build_coastal_model.ipynb  build_from_cli.html  build_from_py.html  build_from_py.ipynb  build_from_script.html  build_riverine_model.html  build_riverine_model.ipynb  example_datasources.html  example_forcing.html  run_sfincs_model.html  sfincs_results_animation.html  sfincs_results_animation.ipynb  sfincs_results_hmax.html  sfincs_results_hmax.ipynb  update_model.html  update_model.ipynb
dev/_generated/: hydromt_sfincs.SfincsModel.build.html  hydromt_sfincs.SfincsModel.config.html  hydromt_sfincs.SfincsModel.crs.html  hydromt_sfincs.SfincsModel.forcing.html  hydromt_sfincs.SfincsModel.geoms.html  hydromt_sfincs.SfincsModel.get_config.html  hydromt_sfincs.SfincsModel.get_model_time.html  hydromt_sfincs.SfincsModel.get_spatial_attrs.html  hydromt_sfincs.SfincsModel.grid.html  hydromt_sfincs.SfincsModel.html  hydromt_sfincs.SfincsModel.mask.html  hydromt_sfincs.SfincsModel.plot_basemap.html  hydromt_sfincs.SfincsModel.plot_forcing.html  hydromt_sfincs.SfincsModel.read.html  hydromt_sfincs.SfincsModel.read_config.html  hydromt_sfincs.SfincsModel.read_forcing.html  hydromt_sfincs.SfincsModel.read_geoms.html  hydromt_sfincs.SfincsModel.read_grid.html  hydromt_sfincs.SfincsModel.read_results.html  hydromt_sfincs.SfincsModel.read_states.html  hydromt_sfincs.SfincsModel.read_staticgeoms.html  hydromt_sfincs.SfincsModel.read_staticmaps.html  hydromt_sfincs.SfincsModel.read_subgrid.html  hydromt_sfincs.SfincsModel.region.html  hydromt_sfincs.SfincsModel.res.html  hydromt_sfincs.SfincsModel.results.html  hydromt_sfincs.SfincsModel.root.html  hydromt_sfincs.SfincsModel.set_config.html  hydromt_sfincs.SfincsModel.set_forcing.html  (+133 more)
dev/_modules/: index.html
docs/: Makefile  api.rst  changelog.rst  clean.py  conf.py  contributing.rst  index.rst  installation.rst  intro.rst  make.bat
envs/: hydromt-fiat.yml  hydromt-sfincs-dev.yml  hydromt-sfincs-min.yml  hydromt-sfincs.yml
examples/: README.rst  build_advanced_subgrid_compound_model_from_script.ipynb  build_coastal_model.ipynb  build_from_cli.ipynb  build_from_py.ipynb  build_from_script.ipynb  build_model_riverine.ipynb  build_regular_compound_model_from_script.ipynb  build_riverine_model.ipynb  build_simple_compound_model.ipynb  build_simple_compound_model_from_script.ipynb  convert_ERA5_input_to_snapwave_bc_forcing.ipynb  convert_nc_to_tif.ipynb  data_catalog.yml  discharge_input_sfincs.csv  example_datasources.ipynb  example_forcing.ipynb  example_regulargrid.ipynb  example_regulargrid_frominifile.ipynb  example_regulargrid_fromscratch.ipynb  example_regulargrid_fromscratch_tl2.ipynb  example_regulargrid_rotated.ipynb  make_Duck_hydromt.ipynb  model_build.ini  plot_sfincs_map.ipynb  riverine_gauges.csv  run_sfincs_model.ipynb  sfinc-cli.ipynb  sfinc_build_model.ipynb  sfinc_update_model.ipynb  sfincs_base_build.ini  sfincs_base_build.yml  sfincs_base_update.ini  sfincs_base_update.yml  sfincs_coastal.ini  sfincs_coastal_v1.ini  sfincs_results_animation.ipynb  sfincs_results_hmax.ipynb  sfincs_riverine.ini  sfincs_simple_compound_base.ini  (+8 more)
hydromt_fiat/: __init__.py  fiat.py
hydromt_sfincs/: __init__.py  config.py  config_variables.py  cross_sections.py  discharge_points.py  drainage_structures.py  gis_utils.py  hydromt_sfincs.py  infiltration.py  initial_conditions.py  manning_roughness.py  meteo.py  observation_points.py  output.py  plots.py  quadtree.py  regulargrid.py  rivers.py  sfincs.py  sfincs_2.py  sfincs_OLD.py  sfincs_input.py  sfincs_tmp.py  sfincs_utils.py  snapwave_conditions.py  storage_volume.py  subgrid.py  thin_dams.py  utils.py  waterlevel_conditions.py  wave_makers.py  weirs.py
latest/: index.html
preview/: api.html  changelog.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
stable/: index.html
tests/: conftest.py  debug_model_class_rivers_downstream.py  test_0utils.py  test_1model_class.py  test_bathymetry.py  test_config.py  test_flwdir.py  test_inp.py  test_model_class.py  test_model_class_rivers_downstream.py  test_observation_points.py  test_quadtree.py  test_regulargrid.py  test_sfincs_utils.py
v0.1.0/: changelog.html  contributing.html  genindex.html  index.html  installation.html  intro.html  objects.inv  search.html  searchindex.js
v0.2.0/: changelog.html  contributing.html  genindex.html  index.html  installation.html  intro.html  objects.inv  search.html  searchindex.js
v0.2.1/: changelog.html  contributing.html  genindex.html  index.html  installation.html  intro.html  objects.inv  search.html  searchindex.js
v1.0.0/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.0.1/: api.html  changelog.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v1.0.2/: changelog.html  index.html  objects.inv  py-modindex.html  searchindex.js
v1.0.3/: api.html  changelog.html  genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.1.0/: api.html  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
(+1110 files in other folders)
