[build-system]
requires = ["flit_core >=3.2.0,<3.3"]
build-backend = "flit_core.buildapi"

[project]
name = "hydromt_sfincs"
authors = [
    {name = "Dirk Eilander", email = "dirk.eilander@deltares.nl"},
    {name = "Tim Leijnse", email = "tim.leijnse@deltares.nl"},
]
dependencies = [
    "dask",
    "geopandas >=0.8",
    "hydromt>=0.4.5",
    "netcdf4",
    "numpy",
    "pandas",
    "pyflwdir>=0.5.5",
    "pygeos",
    "rasterio",
    "scipy",
    "xarray",
]
requires-python = ">=3.8" # fix tests to support older versions
readme = "README.rst"
classifiers = [
    # https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]
dynamic = ['version', 'description']

[project.optional-dependencies]
test = [
	"testpath",
	"responses",
	"pytest>=2.7.3",
	"pytest-cov",
	"black",
]
doc = [
	"sphinx",
	"sphinx_rtd_theme",
]

[project.urls]
Documentation = "https://deltares.github.io/hydromt_sfincs/"
Source = "https://github.com/Deltares/hydromt_sfincs"

[project.entry-points."hydromt.models"]
sfincs = "hydromt_sfincs.sfincs:SfincsModel"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flit.sdist]
include = ["hydromt_sfincs"]
exclude = ["docs", "examples", "envs", "tests", "binder", ".github", "sandbox"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:distutils Version classes are deprecated:DeprecationWarning",
]